--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <!-- <script src="asset/js/03-concatenation.js"></script> -->
     <!-- <scrip src="asset/js/05-operateur-numerique.js"></script> -->
     <!-- <script src="asset/js/06-conditions.js"></script> -->
-    <script src="asset/js/07-boucles.js"></script>
-
+    <!-- <script src="asset/js/07-boucles.js"></script> -->
+    <!-- <script src="asset/js/08-function.js"></script> -->
+    <!-- <script src="asset/js/09-tableau.js"></script> -->
+    <script src="asset/js/10-fonctions-tableaux.js"></script>
   </head>
   <body>
     <div class="container">
